# projet

./: CMakeLists.txt  Sequences_total.cpp
src/: case_one.cpp  case_one.hpp  case_two.cpp  case_two.h  lecture.cpp  lecture.h  main.cpp  testCaseTwo.cpp  testMotifs.cpp
